objects/inov8__PMT_Project__c.object
<CustomObject>
    <description>A collaborative enterprise which has a planned goal. A project can one or more phases</description>
    <fields>
        <fullName>inov8__Assumptions__c</fullName>
        <label>Assumptions</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inov8__Business_Case__c</fullName>
        <inlineHelpText>Business objectives: Requested solution description and expected result. Mention if this is a global solution or call out if there is any variation by region.</inlineHelpText>
        <label>Business Case</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inov8__Days_to_go__c</fullName>
        <formula>inov8__Deadline_formula__c - Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to go</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inov8__Deadline__c</fullName>
        <label>End Date Rollup</label>
        <summarizedField>inov8__PMT_Phase__c.inov8__End_Date_Rollup__c</summarizedField>
        <summaryForeignKey>inov8__PMT_Phase__c.inov8__Project__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>inov8__Deadline_formula__c</fullName>
        <formula>IF((ISNULL(inov8__Deadline__c)&amp;&amp; ISNULL(inov8__Deadline_parent_phase__c)),inov8__Initial_End_Date__c,IF((NOT(ISNULL(inov8__Deadline__c))&amp;&amp;NOT(ISNULL(inov8__Deadline_parent_phase__c))),if(inov8__Deadline__c&gt;inov8__Deadline_parent_phase__c,inov8__Deadline__c,inov8__Deadline_parent_phase__c),if(ISNULL(inov8__Deadline_parent_phase__c),inov8__Deadline__c,inov8__Deadline_parent_phase__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inov8__Deadline_parent_phase__c</fullName>
        <label>End Date from parent phase</label>
        <summarizedField>inov8__PMT_Phase__c.inov8__End_date_from_child__c</summarizedField>
        <summaryForeignKey>inov8__PMT_Phase__c.inov8__Project__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>inov8__Description__c</fullName>
        <inlineHelpText>A general description of the project.</inlineHelpText>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inov8__Duration__c</fullName>
        <formula>inov8__Deadline_formula__c - inov8__Kickoff_formula__c+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inov8__End_Fiscal_Year__c</fullName>
        <formula>IF($CustomMetadata.inov8__PMT_Setting__mdt.inov8__Default.inov8__Start_Month_of_Fiscal_Year__c!=1 &amp;&amp; Month(inov8__Deadline_formula__c ) &gt;= $CustomMetadata.inov8__PMT_Setting__mdt.inov8__Default.inov8__Start_Month_of_Fiscal_Year__c,
&apos;FY&apos;&amp;RIGHT(TEXT(YEAR(inov8__Deadline_formula__c ) +1),2),
&apos;FY&apos;&amp;RIGHT(TEXT(YEAR(inov8__Deadline_formula__c )),2)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inov8__Fiscal_Year_Difference__c</fullName>
        <formula>Value(Right( inov8__End_Fiscal_Year__c ,2))-Value(Right( inov8__Start_Fiscal_Year__c ,2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year Difference</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inov8__Go_Live_Date__c</fullName>
        <label>Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inov8__Goal_Statement__c</fullName>
        <description>objective, issue being addressed, target, how will the project be measured.</description>
        <inlineHelpText>objective, issue being addressed, target, how will the project be measured.</inlineHelpText>
        <label>Goal Statement</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inov8__Health_Comment__c</fullName>
        <description>Comment to explain the reasons of the Project Status.</description>
        <label>Health Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inov8__Health_Icon__c</fullName>
        <description>Icon corresponding to status of the project.</description>
        <formula>IMAGE(
CASE(inov8__Project_Health__c,
&quot;Not Started&quot;, &quot;/resource/inov8__PMT_Status_logos/Not_Started.png&quot;,
&quot;On Track&quot;, &quot;/resource/inov8__PMT_Status_logos/On_Track.png&quot;,
&quot;At risk&quot;, &quot;/resource/inov8__PMT_Status_logos/At_Risk.png&quot;,
&quot;Late&quot;, &quot;/resource/inov8__PMT_Status_logos/Late.png&quot;,
&quot;On Hold&quot;, &quot;/resource/inov8__PMT_Status_logos/On_Hold.png&quot;,
&quot;Completed&quot;, &quot;/resource/inov8__PMT_Status_logos/Completed.png&quot;,
&quot;Closed, not Completed&quot;, &quot;/resource/inov8__PMT_Status_logos/Closed_not_Completed.png&quot;,
&quot;/resource/inov8__PMT_Status_logos/On_Track.png&quot;),
&quot;status icon&quot;,25,25)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Health</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inov8__In_Scope__c</fullName>
        <label>In Scope</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inov8__Initial_End_Date__c</fullName>
        <label>Initial End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inov8__Initial_Start_Date__c</fullName>
        <label>Initial Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inov8__Issues_Risk__c</fullName>
        <inlineHelpText>Identify and explain the risk if this request is not deployed</inlineHelpText>
        <label>Issues &amp; Risks</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inov8__Kickoff_formula__c</fullName>
        <formula>IF((ISNULL(inov8__Start_Date_Rollup__c)&amp;&amp; ISNULL(inov8__Start_Date_from_parent_phase__c)),  inov8__Initial_Start_Date__c , IF(NOT(ISNULL(inov8__Start_Date_Rollup__c))&amp;&amp; NOT(ISNULL(inov8__Start_Date_from_parent_phase__c)),if(inov8__Start_Date_from_parent_phase__c&gt;inov8__Start_Date_Rollup__c,inov8__Start_Date_Rollup__c,inov8__Start_Date_from_parent_phase__c),if(ISNULL(inov8__Start_Date_from_parent_phase__c),inov8__Start_Date_Rollup__c,inov8__Start_Date_from_parent_phase__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inov8__Level_of_Effort__c</fullName>
        <label>Level of Effort</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inov8__Out_of_Scope__c</fullName>
        <label>Out of Scope</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inov8__Owner_s_Department__c</fullName>
        <formula>Owner:User.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner&apos;s Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inov8__PMO_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PMO Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inov8__Path_to_Green__c</fullName>
        <label>Path to Green</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>inov8__Percentage_Completion__c</fullName>
        <formula>IF(inov8__Sum_of_Task_Duration__c==0,0,FLOOR(( inov8__Sum_Wheigted_perc__c /  inov8__Sum_of_Task_Duration__c )*100)/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percentage Completion %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>inov8__Portfolio__c</fullName>
        <label>Portfolio</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>F&amp;S</fullName>
                </value>
                <value>
                    <fullName>P2P</fullName>
                </value>
                <value>
                    <fullName>Q2O</fullName>
                </value>
                <value>
                    <fullName>R2R</fullName>
                </value>
                <value>
                    <fullName>New Entity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inov8__Problem_Statement__c</fullName>
        <inlineHelpText>What process/system limitations are causing this activity. Describe your pain points.</inlineHelpText>
        <label>Problem Statement</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inov8__Processes_Impacted__c</fullName>
        <label>Process(es) Impacted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accruals</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Commissions</fullName>
                </value>
                <value>
                    <fullName>Comp &amp; Ben</fullName>
                </value>
                <value>
                    <fullName>Fixed Assets</fullName>
                </value>
                <value>
                    <fullName>Inter-Co</fullName>
                </value>
                <value>
                    <fullName>Prepaids</fullName>
                </value>
                <value>
                    <fullName>Revenue</fullName>
                </value>
                <value>
                    <fullName>T&amp;E</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inov8__Program_Text__c</fullName>
        <formula>inov8__Program__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inov8__Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Program</label>
        <referenceTo>inov8__PMT_Program__c</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inov8__Project_Category__c</fullName>
        <label>Project Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Non IT</fullName>
                </value>
                <value>
                    <fullName>SteerCo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inov8__Project_Completion_Image__c</fullName>
        <formula>IMAGE(&quot;/resource/inov8__PMT_Status_Images/PMT_Percent_100.jpg&quot;, &quot;Completed&quot;, 10, (inov8__Percentage_Completion__c * 100 )/1.3) &amp; 
IMAGE(&quot;/resource/inov8__PMT_Status_Images/PMT_Percent_0.jpg&quot;, &quot;Zero&quot;, 10, (100 - inov8__Percentage_Completion__c * 100 )/1.3) &amp; 
&apos; &apos; &amp; 
TEXT(ROUND(inov8__Percentage_Completion__c * 100,0)) &amp; 
&apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Completion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inov8__Project_End_Month__c</fullName>
        <formula>TEXT(YEAR(inov8__Deadline_formula__c)) + &quot;.&quot; + TEXT(MONTH(inov8__Deadline_formula__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project End Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inov8__Project_Health__c</fullName>
        <description>Project Status to be used in reporting</description>
        <inlineHelpText>On Track = Will meet deadline / At Risk = At risk for missing deadline / Late = Will miss deadline</inlineHelpText>
        <label>Project Health</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inov8__PMT_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inov8__Project_Initiator__c</fullName>
        <label>Project Initiator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tax</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>F&amp;S</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inov8__Project_Lead__c</fullName>
        <formula>Owner:User.FirstName+&quot; &quot;+Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Lead</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inov8__Project_Owner__c</fullName>
        <formula>Owner:User.FirstName + &apos; &apos; +  Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inov8__Project_Size__c</fullName>
        <formula>IF(ISPICKVAL(inov8__Level_of_Effort__c,&quot;Small&quot;),1, 
IF(ISPICKVAL(inov8__Level_of_Effort__c,&quot;Medium&quot;),2, 
IF(ISPICKVAL(inov8__Level_of_Effort__c,&quot;Large&quot;),3,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inov8__Project_Start_Month__c</fullName>
        <formula>TEXT(YEAR(inov8__Kickoff_formula__c )) + &quot;.&quot; + TEXT(MONTH(inov8__Kickoff_formula__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Start Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inov8__Project_Status__c</fullName>
        <label>Project Current Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Discovery</fullName>
                </value>
                <value>
                    <fullName>Initiate</fullName>
                    <default>true</default>
                    <label>Initiate</label>
                </value>
                <value>
                    <fullName>Execute</fullName>
                </value>
                <value>
                    <fullName>Transition</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inov8__Qtr_of_Completion__c</fullName>
        <description>Qtr of Completion</description>
        <formula>&quot;FY&quot; + CASE(MONTH(inov8__Deadline_formula__c),
1,TEXT(MOD(Year(inov8__Deadline_formula__c),100)),
TEXT(MOD(Year(inov8__Deadline_formula__c),100)+1)) 
+ &quot;-&quot; + 
CASE(MONTH(inov8__Deadline_formula__c), 
1,&quot;Q4&quot;, 
2,&quot;Q1&quot;, 
3,&quot;Q1&quot;, 
4,&quot;Q1&quot;, 
5,&quot;Q2&quot;, 
6,&quot;Q2&quot;, 
7,&quot;Q2&quot;, 
8,&quot;Q3&quot;, 
9,&quot;Q3&quot;, 
10,&quot;Q3&quot;, 
11,&quot;Q4&quot;, 
12,&quot;Q4&quot;, 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qtr of Completion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inov8__Release_Changes__c</fullName>
        <label>Release Changes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>inov8__Release_Date__c</fullName>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inov8__Release_Qtr__c</fullName>
        <formula>&quot;FY&quot; + CASE(MONTH(  inov8__Release_Date__c ),
1,TEXT(MOD(Year(inov8__Release_Date__c ),100)),
TEXT(MOD(Year(inov8__Release_Date__c ),100)+1)) 
+ &quot;-&quot; + 
CASE(MONTH( inov8__Release_Date__c ), 
1,&quot;Q4&quot;, 
2,&quot;Q1&quot;, 
3,&quot;Q1&quot;, 
4,&quot;Q1&quot;, 
5,&quot;Q2&quot;, 
6,&quot;Q2&quot;, 
7,&quot;Q2&quot;, 
8,&quot;Q3&quot;, 
9,&quot;Q3&quot;, 
10,&quot;Q3&quot;, 
11,&quot;Q4&quot;, 
12,&quot;Q4&quot;, 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Release Qtr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inov8__Roadmap_Status__c</fullName>
        <description>Indicates whether a project is approved.</description>
        <label>Roadmap Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Committed</fullName>
                    <default>true</default>
                    <label>Committed</label>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Incremental</fullName>
                </value>
                <value>
                    <fullName>Funded</fullName>
                </value>
                <value>
                    <fullName>Non funded</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Runrate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inov8__SOX_Comment__c</fullName>
        <label>SOX Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inov8__SOX_Impact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SOX Impact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inov8__Sponsor__c</fullName>
        <label>Sponsor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inov8__Start_Date_Rollup__c</fullName>
        <label>Start Date Rollup</label>
        <summarizedField>inov8__PMT_Phase__c.inov8__Start_Date_Rollup__c</summarizedField>
        <summaryForeignKey>inov8__PMT_Phase__c.inov8__Project__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>inov8__Start_Date_from_parent_phase__c</fullName>
        <label>Start Date from parent phase</label>
        <summarizedField>inov8__PMT_Phase__c.inov8__Start_date_from_child_project__c</summarizedField>
        <summaryForeignKey>inov8__PMT_Phase__c.inov8__Project__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>inov8__Start_Fiscal_Year__c</fullName>
        <formula>If($CustomMetadata.inov8__PMT_Setting__mdt.inov8__Default.inov8__Start_Month_of_Fiscal_Year__c!=1 &amp;&amp; Month(inov8__Kickoff_formula__c)&gt;=$CustomMetadata.inov8__PMT_Setting__mdt.inov8__Default.inov8__Start_Month_of_Fiscal_Year__c,
&apos;FY&apos;&amp;RIGHT(TEXT(YEAR(inov8__Kickoff_formula__c) +1),2),
&apos;FY&apos;&amp;RIGHT(TEXT(YEAR(inov8__Kickoff_formula__c)),2)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inov8__Sum_Wheigted_perc__c</fullName>
        <label>Sum Wheigted %</label>
        <summarizedField>inov8__PMT_Phase__c.inov8__Phase_Weighted_Perc__c</summarizedField>
        <summaryForeignKey>inov8__PMT_Phase__c.inov8__Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>inov8__Sum_of_Task_Duration__c</fullName>
        <label>Sum of Task Duration</label>
        <summarizedField>inov8__PMT_Phase__c.inov8__Sum_Task_Duration__c</summarizedField>
        <summaryForeignKey>inov8__PMT_Phase__c.inov8__Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>inov8__Sum_of_sum_of_percentage_completion__c</fullName>
        <label>Sum of sum of percentage completion</label>
        <summarizedField>inov8__PMT_Phase__c.inov8__Sum_Of_Task_Completion__c</summarizedField>
        <summaryForeignKey>inov8__PMT_Phase__c.inov8__Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>inov8__Sum_of_task_count_child_project__c</fullName>
        <label>Sum of task count child project</label>
        <summarizedField>inov8__PMT_Phase__c.inov8__Sum_of_tasks_count_child__c</summarizedField>
        <summaryForeignKey>inov8__PMT_Phase__c.inov8__Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>inov8__Sum_of_tasks_count__c</fullName>
        <label>Sum of tasks count</label>
        <summarizedField>inov8__PMT_Phase__c.inov8__Task_Count__c</summarizedField>
        <summaryForeignKey>inov8__PMT_Phase__c.inov8__Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>inov8__SystemsImpacted__c</fullName>
        <inlineHelpText>Please hold &apos;Ctrl&apos; for selecting multiple options</inlineHelpText>
        <label>System(s) Impacted</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>PMT Project</label>
    <listViews>
        <fullName>inov8__All_Open_Projects</fullName>
        <columns>NAME</columns>
        <columns>inov8__Project_Owner__c</columns>
        <columns>inov8__Health_Icon__c</columns>
        <columns>inov8__Project_Status__c</columns>
        <columns>inov8__Percentage_Completion__c</columns>
        <columns>inov8__Qtr_of_Completion__c</columns>
        <columns>inov8__Health_Comment__c</columns>
        <columns>inov8__Path_to_Green__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>inov8__Project_Health__c</field>
            <operation>equals</operation>
            <value>Not Started,On Track,At Risk,Late,On Hold</value>
        </filters>
        <label>All Open Projects</label>
    </listViews>
    <listViews>
        <fullName>inov8__All_Projects1</fullName>
        <columns>NAME</columns>
        <columns>inov8__Project_Owner__c</columns>
        <columns>inov8__Percentage_Completion__c</columns>
        <columns>inov8__Health_Icon__c</columns>
        <columns>inov8__Project_Status__c</columns>
        <columns>inov8__Deadline_formula__c</columns>
        <columns>inov8__Kickoff_formula__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Projects</label>
    </listViews>
    <listViews>
        <fullName>inov8__My_Projects_Home</fullName>
        <columns>NAME</columns>
        <columns>inov8__Project_Owner__c</columns>
        <columns>inov8__Health_Icon__c</columns>
        <columns>inov8__Project_Status__c</columns>
        <columns>inov8__Percentage_Completion__c</columns>
        <columns>inov8__Qtr_of_Completion__c</columns>
        <columns>inov8__Health_Comment__c</columns>
        <columns>inov8__Path_to_Green__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>inov8__Project_Health__c</field>
            <operation>equals</operation>
            <value>Not Started,On Track,At Risk,Late,On Hold</value>
        </filters>
        <label>My Open Projects</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PMT Projects</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>inov8__Project_Member__c</fullName>
        <label>Project Member</label>
    </sharingReasons>
    <validationRules>
        <fullName>inov8__InitialStartDate_should_be_less</fullName>
        <active>true</active>
        <description>Initial Start date must be less than the Initial End date</description>
        <errorConditionFormula>NOT(ISNULL(inov8__Initial_Start_Date__c)) &amp;&amp; NOT(ISNULL(inov8__Initial_End_Date__c)) &amp;&amp; inov8__Initial_End_Date__c&lt; inov8__Initial_Start_Date__c</errorConditionFormula>
        <errorMessage>Initial End date must be after Initial Start date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inov8__Path_to_Green_should_be_blank</fullName>
        <active>true</active>
        <description>Path to Green field should be used only for Late, At Risk or On Hold projects. Please use Health Comment for On Track projects</description>
        <errorConditionFormula>ISBLANK(inov8__Path_to_Green__c  ) &amp;&amp;( ISPICKVAL(inov8__Project_Health__c  , &apos;At Risk&apos;)|| ISPICKVAL(inov8__Project_Health__c  , &apos;On Hold&apos;) ||
 ISPICKVAL(inov8__Project_Health__c  , &apos;Late&apos;))</errorConditionFormula>
        <errorDisplayField>inov8__Path_to_Green__c</errorDisplayField>
        <errorMessage>Path to Green field should be used only for Late, At Risk or On Hold projects. Please use Health Comment for On Track projects</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inov8__SOX_Comment_Blank_SOX_Impact_unchecked</fullName>
        <active>true</active>
        <errorConditionFormula>AND(inov8__SOX_Comment__c&lt;&gt; &apos;&apos;, inov8__SOX_Impact__c=false )</errorConditionFormula>
        <errorMessage>SOX Comment should be blank if SOX Impact is not checked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inov8__SOX_comment_not_null_when_SOX_checked</fullName>
        <active>true</active>
        <errorConditionFormula>AND(inov8__SOX_Impact__c = TRUE,inov8__SOX_Comment__c=&apos;&apos;)</errorConditionFormula>
        <errorMessage>SOX Comment should not be blank if SOX Impact is checked</errorMessage>
    </validationRules>
</CustomObject>